--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.0.6",
-    "request": "^2.88.0"
+    "hbs": "^4.1.1",
+    "kind-of": "^6.0.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.3"
   }
 }
